# OpenglGameEngine

./: CMakeLists.txt  README.md  sonar-project.properties
.github/workflows/: build.yml
include/Framework/: Camera.h  IScene.h  Image.h  Scene.h  SceneObject.h  framework.h
include/Framework/Model/: Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h
include/Framework/ModelLoader/: ModelLoader.cpp  ModelLoader.h
include/Framework/Opengl/: Texture.h  openglFramwork.h
include/Framework/Opengl/Buffer/: Buffer.h  VertexAttribute.cpp  VertexAttribute.h
include/Framework/Opengl/Shader/: ShaderProgram.cpp  ShaderProgram.h
include/SDL2/: SDL_egl.h  SDL_hidapi.h  SDL_hints.h  SDL_opengl.h  SDL_render.h  SDL_test.h  SDL_test_assert.h  SDL_test_common.h  SDL_test_compare.h  SDL_test_crc32.h  SDL_test_font.h  SDL_test_fuzzer.h  SDL_test_harness.h  SDL_test_images.h  SDL_test_log.h  SDL_test_md5.h  SDL_test_memory.h  SDL_test_random.h  SDL_video.h  SDL_vulkan.h
include/assimp/: config.h  material.h  postprocess.h
include/framework/: Camera.h  EventHandler.h  Grid.h  IScene.h  Image.h  Mesh.h  Model.h  ModelLoader.h  Scene.h  SceneObject.h  Shader.h  ShaderProgram.h  Texture.h  Vertex.h  framework.h
include/glm/: CMakeLists.txt  ext.hpp  glm.hpp
include/glm/core/: _detail.hpp  dummy.cpp  type_float.hpp  type_int.hpp
include/glm/gtc/: double_float.hpp  half_float.hpp  matrix_operation.hpp  matrix_projection.hpp  matrix_transform.hpp  quaternion.hpp  swizzle.hpp  type_precision.hpp  type_ptr.hpp
include/glm/gtx/: associated_min_max.hpp  bit.hpp  bit.inl  closest_point.hpp  color_cast.hpp  color_space.hpp  color_space_YCoCg.hpp  comparison.hpp  compatibility.hpp  component_wise.hpp  determinant.hpp  epsilon.hpp  euler_angles.hpp  extend.hpp  extented_min_max.hpp  fast_exponential.hpp  fast_square_root.hpp  fast_trigonometry.hpp  gradient_paint.hpp  handed_coordinate_space.hpp  inertia.hpp  int_10_10_10_2.hpp  integer.hpp  intersect.hpp  inverse.hpp  inverse_transpose.hpp  log_base.hpp  matrix_access.hpp  matrix_cross_product.hpp  matrix_major_storage.hpp  matrix_operation.hpp  matrix_projection.hpp  matrix_query.hpp  matrix_selection.hpp  mixed_product.hpp  norm.hpp  normal.hpp  normalize_dot.hpp  number_precision.hpp  ocl_type.hpp  (+21 more)
include/glm/img/: multiple.hpp  wrap.hpp
include/glm/virtrev/: address.hpp  equal_operator.hpp  xstream.hpp
include/imgui/: imconfig.h  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_internal.h  imgui_widgets.cpp  imstb_truetype.h
include/imgui/sdl_opengl3/: imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_sdl.cpp
include/stb/: stb_image.h
lib/: assimp-vc143-mtd.exp
res/models/plane/: plane.gltf
res/shaders/: defaultFragmentShader.glsl  defaultVertexShader.glsl  depthFragmentShader.glsl  depthVertexShader.glsl  fragmentShader.glsl  vertexShader.glsl
src/: main.cpp  main2.cpp  resources.h
src/Framework/: Camera.h  Framework.h  Grid.h  LoadingBar.h  Scene.h  SceneBase.h  SceneObject.h  framework.h
src/Framework/Animation/: Animation.h  Animator.h  Bone.h
src/Framework/Model/: Geometry.cpp  Geometry.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Vertex.h  VertexBoneData.h
src/Framework/ModelLoader/: AssimpLoader.cpp  AssimpLoader.h  ModelLoader.h
src/Framework/Opengl/: Texture.h
src/Framework/Opengl/Buffer/: ElementBuffer.h  FramerBuffer.h  VertexBuffer.cpp
src/Framework/Opengl/Shader/: ShaderProgram.h  Uniform.cpp  Uniform.h  UniformProvider.h
src/Framework/Opengl/Texture/: Texture.cpp
src/Framework/Opengl/Types/: OpenglType.h
src/Framework/Opengl/Uniform/: Uniforms.h
src/Framework/Opengl/Uniform/Base/: UniformBase.h  UniformValue.h
src/Framework/Opengl/Uniform/Impl/GL_F/: GL_1_F.h  GL_2_F.h  GL_3_F.h  GL_4_F.h
src/Framework/Opengl/Uniform/Impl/GL_F_V/: GL_1_F_V.h  GL_2_F_V.h  GL_3_F_V.h  GL_4_F_V.h
src/Framework/Opengl/Uniform/Impl/GL_I/: GL_1_I.h  GL_2_I.h  GL_3_I.h  GL_4_I.h
src/Framework/Opengl/Uniform/Impl/GL_I_V/: GL_1_I_V.h  GL_2_I_V.h  GL_3_I_V.h  GL_4_I_V.h
src/Framework/Opengl/Uniform/Impl/GL_MATRIX_F_V/: GL_MATRIX_2F_V.h  GL_MATRIX_2x3_F_V.h  GL_MATRIX_2x4_F_V.h  GL_MATRIX_3F_V.h  GL_MATRIX_3x2_F_V.h  GL_MATRIX_3x4_F_V.h  GL_MATRIX_4F_V.h  GL_MATRIX_4x2_F_V.h  GL_MATRIX_4x3_F_V.h
src/Framework/Opengl/Uniform/Impl/GL_UI/: GL_1_UI.h  GL_2_UI.h  GL_3_UI.h  GL_4_UI.h
src/Framework/Opengl/Uniform/Impl/GL_UI_V/: GL_1_UI_V.h  GL_2_UI_V.h  GL_3_UI_V.h  GL_4_UI_V.h
src/Framework/Scene/: Camera.h  Grid.h  Scene.h  SceneObject.h
src/Framework/Utility/: ImGuiRenderer.h  Resources.h
src/Models/: light.fbx
src/Models/lambo/: lambo.mtl
src/Models/rpg_character/RPG Character Mecanim Animation Pack FREE/Models/Characters/: untitled.fbx
src/Models/vampire/: model.dae
src/Shaders/: gridFragmentShader.glsl  gridVertexShader.glsl  vertexShader.glsl
src/framework/: Framework.h
src/framework/anim/: KeyValue.h  Keyframe.h
src/framework/animation/: Animation.h  Animator.h  Timeline.h
src/framework/loader/modelLoader/: AssimpLoader.cpp  AssimpLoader.h
src/framework/model/: Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  VertexBoneData.h
src/framework/opengl/Texture/: Texture.cpp
src/framework/opengl/buffer/: ElementBuffer.cpp  FramerBuffer.h
src/framework/opengl/shader/: ShaderProgram.cpp
src/framework/opengl/uniform/: UniformProvider.h  Uniforms.h
src/framework/opengl/uniform/base/: VectorUniformValue.h
src/framework/scene/: Camera.h  Grid.h  Scene.h  SceneObject.h
src/framework/utility/: CameraHandler.h  ImGuiRenderer.h  Resources.h
src/shaders/: fragmentShader01.glsl  gridFragmentShader.glsl  gridFragmentShader02.glsl  gridVertexShader.glsl  gridVertexShader02.glsl  vertexShader01.glsl
